--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
-  <div class="item-1" fxFlex="15%">Item 1</div>
-  <div class="item-2" fxFlex="20%" fxFlexOrder="3">Item 2</div>
-  <div class="item-3" fxFlex>Item 3</div>
-</div>
-
-<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
-  <div class="item-4" fxFlex fxFlexOffset="50px" fxFlexOffset.xs="0">Item 4</div>
-  <div class="item-5" fxFlex="200px">Item 5</div>
-</div>
+<ul>
+  <li *ngFor = "let course of coureses">
+    {{ course.team_captain }}
+  </li>
+</ul>
