make rest call from service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor = "let course of coureses">
-    {{ course.team_captain }}
+  <li *ngFor = "let user of users">
+    {{ user.name }}
   </li>
 </ul>
